Refresh position table when operation is added/created.
- Refactored pagination section in CRUDManager table.
- Add positionCrudManager table to OperationForm to allow refresh the position table.

--- a/templates/wallets/dashboard.html.twig
+++ b/templates/wallets/dashboard.html.twig
@@ -73,6 +73,8 @@
             });
 
             positionCrudManager.render();
+
+            window.positionCrudManager = positionCrudManager;
         });
     </script>
 
@@ -175,6 +177,7 @@
             };
 
             const form = new OperationForm(
+                window.positionCrudManager,
                 swalFormOptionsText,
                 '#js-manager-{{ operation_entity_name|lower|replace({' ': '_'}) }}-form-template',
             );
