Load wallet information via ajax.
- Extract to a separate module a client to connect to a sever.
- Add get by id wallet in api wallet controller.
- Update via ajax wallet info.

--- a/templates/stocks_dividend/index.html.twig
+++ b/templates/stocks_dividend/index.html.twig
@@ -132,7 +132,7 @@
                         $button.attr("disabled", true);
                         $button.find('i').addClass('fa-spin');
 
-                        this._sendRPC(
+                        InvestmentManagerClient.sendRPC(
                             Routing.generate(entityType + '_sync', {'_id': {{ stock.id }}}),
                             'GET'
                         ).then((result) => {
