--- a/assets/css/WalletDashboard.scss
+++ b/assets/css/WalletDashboard.scss
@@ -28,5 +28,12 @@
   .info-box-number {
     font-size: 16px;
   }
+
+  .js-wallet-pbenefits {
+    font-size: 24px;
+    position: absolute;
+    left: 24px;
+    bottom: -12px;
+  }
 }
 
