--- a/templates/wallets/partial/head-dashboard.html.twig
+++ b/templates/wallets/partial/head-dashboard.html.twig
@@ -6,8 +6,9 @@
     <!-- Invested -->
     <div class="col-md-4 col-sm-6 col-xs-12">
         <div class="info-box">
-            <span class="info-box-icon bg-yellow"><i class="fas fa-piggy-bank"></i></span>
-
+            <span class="info-box-icon bg-{% if wallet.benefits > 0 %}green{% else %}{{ red }}{% endif %}">
+                <i class="fas fa-chart-pie"></i><span class="js-wallet-pbenefits"> 0.00%</span>
+            </span>
             <div class="info-box-content">
                 <div class="row">
                     <div class="col-xs-6">
