Added benefit, % benefit and change column to position table.

--- a/templates/wallets/dashboard.html.twig
+++ b/templates/wallets/dashboard.html.twig
@@ -88,6 +88,18 @@
 
             positionCrudManager.render();
 
+            // Tweak button toggle main menu to show/hide columns
+            $('.sidebar-toggle').on(
+                'click',
+                function(e) {
+                    let $button = $(e.currentTarget);
+
+                    if ($button.data('toggle') === 'push-menu') {
+                        this.toggleExpanded();
+                    }
+                }.bind(positionCrudManager)
+            );
+
             window.positionCrudManager = positionCrudManager;
         });
     </script>
