--- a/templates/stocks/partial/view.html.twig
+++ b/templates/stocks/partial/view.html.twig
@@ -27,7 +27,7 @@
                         },
                         {
                             'key': 'Forward Dividend & Yield',
-                            'value': 'forwardDividendYield',
+                            'value': 'displayDividendYield',
                             'render': 'decimal',
                         },
                         {
