--- a/templates/wallets/partial/operation-box.html.twig
+++ b/templates/wallets/partial/operation-box.html.twig
@@ -13,7 +13,7 @@
             <!-- /.box-header -->
             <div class="box-body">
                 {% embed 'Components/ui/crud-manage-table.html.twig' with {
-                    'entity_name': operation_entity_name,
+                    'entity_name': wallet_operation_entity_name,
                     'fields': wallet_operation_fields,
                     'js_crud_manage_class': 'js-operation-crud-manage-row-box',
                     'border': 0
