--- a/templates/Components/ui/crud-manage-table.html.twig
+++ b/templates/Components/ui/crud-manage-table.html.twig
@@ -3,7 +3,7 @@
     fields => {
                 'render': {
                     base:   <value>, default(text) -> How to render the field.
-                            Render type [text, currency, date, slice, check]
+                            Render type [text, currency, date, slice, check, quantity]
                     option: <value>
 
                         1. base 'text' option should not be defined.
@@ -11,6 +11,7 @@
                         3. base 'date' option value is the format date.
                         4. base 'currency' option value is the format currency.
                         5. base 'check' option value is the object to check whether is null or not.
+                        6. base 'quantity' option value is the object to check to determinate whether increase or decrease.
                 },
                 'name': <value>, # required -> Column name
                 'label': <value>, -> Column name label. When label is not defined then name is used instead.
@@ -69,7 +70,7 @@
                 <div class="col-md-12">
                     <div class="pull-left col-sm-6">
                         <span class="js-manage-pagination-info" id="{{ entity_name|lower|replace({' ': '_'}) }}s-pagination-info" role="status" aria-live="polite"
-                           data-text="{{ 'Showing :from to :to of :of'|trans }} {{ entity_name|lower|replace({' ': '_'}) }}s"></span>
+                           data-text="{{ 'Showing :from to :to of :of'|trans }} {{ entity_name|lower|replace({'_': ' '}) }}s"></span>
                     </div>
                     <div class="pull-right col-sm-6">
                         <ul id="{{ entity_name|lower|replace({' ': '_'}) }}s-pagination" class="pagination-sm pagination js-manage-pagination pull-right"></ul>
