Starting to update one of projected dividends

--- a/templates/stocks_dividend/index.html.twig
+++ b/templates/stocks_dividend/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block page_subtitle %}{{ stock|trans|title }}{% endblock %}
+{% block page_subtitle %}{{ stock|trans|title|upper }}{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
