Update FormStockType to use Money.
It was created two new form types MoneyType and HiddenMoneyType along with the MoneyMapper to allow to transform and revert transform the VO Money. Added money_widget to the `horizontal-theme-form.html.twig`. Updated custom twig functions, css and js to be able to fix stock view.

--- a/assets/css/StockForm.scss
+++ b/assets/css/StockForm.scss
@@ -21,3 +21,9 @@
         float: right;
     }
 }
+
+.input-group .col-sm-9 .input-group-addon {
+    border-radius: 0;
+    border-color: #d2d6de;
+    background-color: #fff;
+}
