--- a/templates/Components/Form/horizontal-theme-form.html.twig
+++ b/templates/Components/Form/horizontal-theme-form.html.twig
@@ -66,3 +66,24 @@
     {%- set wrapper = false -%}
     {{ block('form_widget_simple') }}
 {%- endblock hidden_widget -%}
+
+{% block money_widget -%}
+    {% set prepend = not (money_pattern starts with '{{') %}
+    {% set append = not (money_pattern ends with '}}') %}
+    <div class="{% if label is not same as(false) %}col-sm-9{% else -%}col-sm-12{%- endif %}">
+    {% if prepend or append %}
+        <div class="input-group">
+            {% if prepend %}
+                <span class="input-group-addon">{{ money_pattern|form_encode_currency }}</span>
+            {% endif %}
+            {% set wrapper = false %}
+            {{- block('form_widget_simple') -}}
+            {% if append %}
+                <span class="input-group-addon">{{ money_pattern|form_encode_currency }}</span>
+            {% endif %}
+        </div>
+    {% else %}
+        {{- block('form_widget_simple') -}}
+    {% endif %}
+    </div>
+{%- endblock money_widget %}
