--- a/templates/Components/Macros/crud-manage-render.html.twig
+++ b/templates/Components/Macros/crud-manage-render.html.twig
@@ -29,7 +29,7 @@
 {% macro render_money(value) %}
     <% if ({{ value }} && {{ value }}.value) { %>
         <% if ({{ value }}.currency.currencyCode == 'USD') { %>
-            <%= {{ value }}.preciseValue.toFixed({{ value }}.precision).toString().replace(/\./g, ",") %> $
+            $ <%= {{ value }}.preciseValue.toFixed({{ value }}.precision).toString().replace(/\./g, ",") %>
         <% } else { %>
             &euro; <%= {{ value }}.preciseValue.toFixed({{ value }}.precision).toString().replace(/\./g, ",") %>
         <% } %>
