--- a/templates/wallets/partial/dividend-box.html.twig
+++ b/templates/wallets/partial/dividend-box.html.twig
@@ -29,55 +29,55 @@
 
             <div class="info-box-content">
                 <span class="info-box-text" style="margin-bottom: 12px;">{{ 'Dividend Projected'|trans }}</span>
-                <span class="info-box-number">€ 5,200</span>
+                <span class="info-box-number js-wallet-dividend-projected"><small>&euro;</small> 0.00</span>
 
                 <div class="progress">
-                    <div class="progress-bar" style="width: 50%"></div>
+                    <div class="progress-bar js-wallet-dividend-increase-bar" style="width: 0%"></div>
                 </div>
                 <span class="progress-description">
-                    50% Increase from last year
+                    <span class="js-wallet-dividend-increase">0.00</span>% Increase from last year
                   </span>
                 <br>
                 <table class="table dividend-two-year">
                     <thead>
                     <tr>
                         <th></th>
-                        <th style="text-align: center;"><span class="info-box-text">2019</span></th>
-                        <th style="text-align: center;"><span class="info-box-text">2018</span></th>
+                        <th style="text-align: center;"><span class="info-box-tex js-wallet-dividend-year" data-year="{{ "now"|date("Y") }}">{{ "now"|date("Y") }}</span></th>
+                        <th style="text-align: center;"><span class="info-box-text js-wallet-dividend-previous-year" data-year="{{ "now"|date("Y") - 1 }}">{{ "now"|date("Y") - 1 }}</span></th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
                         <td>
-                            <span class="info-box-text">{{ 'June'|trans }}</span>
+                            <span class="info-box-text js-wallet-dividend-month" data-month="{{ "now"|date("n") }}">{{ "now"|date("M") }}</span>
                         </td>
                         <td>
-                            <span class="info-box-number">€ 5,200</span>
+                            <span class="info-box-number js-wallet-dividend-year-month-1">-</span>
                         </td>
                         <td>
-                            <span class="info-box-number">€ 5,200</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <span class="info-box-text">{{ 'July'|trans }}</span>
-                        </td>
-                        <td>
-                            <span class="info-box-number">€ 5,200</span>
-                        </td>
-                        <td>
-                            <span class="info-box-number">€ 5,200</span>
+                            <span class="info-box-number js-wallet-dividend-previous-month-1">-</span>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <span class="info-box-text">{{ 'August'|trans }}</span>
+                            <span class="info-box-text js-wallet-dividend-month" data-month="{{ "now"|date_modify("+1 month")|date("n") }}">{{ "now"|date_modify("+1 month")|date("M") }}</span>
                         </td>
                         <td>
-                            <span class="info-box-number">€ 5,200</span>
+                            <span class="info-box-number js-wallet-dividend-year-month-2">-</span>
                         </td>
                         <td>
-                            <span class="info-box-number">€ 5,200</span>
+                            <span class="info-box-number js-wallet-dividend-previous-month-2">-</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span class="info-box-text js-wallet-dividend-month" data-month="{{ "now"|date_modify("+2 months")|date("n") }}">{{ "now"|date_modify("+2 months")|date("M") }}</span>
+                        </td>
+                        <td>
+                            <span class="info-box-number js-wallet-dividend-year-month-3">-</span>
+                        </td>
+                        <td>
+                            <span class="info-box-number js-wallet-dividend-previous-month-3">-</span>
                         </td>
                     </tr>
                     </tbody>
